# fbx_rendering

./: CMakeLists.txt  FbxParser.sln
FbxParser/: FbxParser.cpp  FbxParser.h  FbxParser.vcxproj  ModelReconstruct.cpp  ModelReconstruct.h  animation.anim  main.cpp
fbx_models/: CMakeLists.txt  fbx_models.cpp  fbx_models.h  fbx_render.cpp  fbx_render.hpp  vertex_shader.glsl
